Closed
Bug 1461023
Opened 7 years ago
Closed 7 years ago
Disable the assertion that checks that we have surely the previous opacity value when we skip computing opacity animation value on the compositor
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla62
People
(Reporter: hiro, Assigned: hiro)
References
Details
Attachments
(1 file)
From bug 1176019 comment 43;
> My patch seems to be crashing unwrapping the Maybe on this line: https://searchfox.org/mozilla-central/source/gfx/layers/composite/AsyncCompositionManager.cpp#722. The test seems to fail when switching between tabs very quickly (can't reproduce it locally).
So, I think the case is that we've already dropped the past animation values from animation storage but haven't yet removed animations from the layer.
I am going to disable the assertion here in this bug and re-enable it in bug 1459775 along with the proper fix.
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Comment 3•7 years ago
|
||
mozreview-review |
Comment on attachment 8975191 [details]
Bug 1461023 - Disable the assertion that checks the previous opacity animation value exists when we skip computing opacity animation.
https://reviewboard.mozilla.org/r/243538/#review249410
Attachment #8975191 -
Flags: review?(bugmail) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0624369b3b08
Disable the assertion that checks the previous opacity animation value exists when we skip computing opacity animation. r=kats
![]() |
||
Comment 5•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox62:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Comment 6•7 years ago
|
||
bugherder uplift |
status-firefox61:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•