Bug 1461023 - Disable the assertion that checks the previous opacity animation value exists when we skip computing opacity animation. r=kats

We are going to re-enable the assertion with a proper fix in bug 1459775.

MozReview-Commit-ID: 2jy6vIImqD